[package]
name = "rust_gl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
lua = ["rlua/default"]
steam = ["steamworks"]

[dependencies]
#glfw = "*"
gl = "*"
obj-rs = { path = "../../../Anthony/obj-rs/obj-rs" }
vecmath = "*"
maplit = "*"
downcast-rs = "*"
image = "*"
ttf-utils = "*"
ttf-parser = "*"
enum-iterator = "*"
enum-iterator-derive = "*"
strum_macros = "*"
rand = "*"
text-to-png = "*"
rlua = {version = "*", features = ["builtin-lua54"]}
steamworks = {version = "*", optional = true}

serde = { version = "1.0.144", features = ["derive"] }
serde_json = "*"
serde_xml = "*"

imgui-glfw-rs = {path = "../../Documents/GitHub/imgui-glfw-rs"}

[dependencies.cstr]
version = "*"